app/main/default/objects/Flosum__Metadata_Log__c/fields/Bitbucket_Synchronize__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Bitbucket_Synchronize__c</fullName>
        <formula>Flosum__Organisation__r.Bitbucket_Synchronize__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bitbucket Synchronize</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>