app/main/default/objects/Flosum__Metadata_Log__c/fields/Flosum__Options__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Options__c</fullName>
        <description>Other options for deployment/validation</description>
        <label>Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>