app/main/default/objects/Flosum__Metadata_Log__c/fields/Flosum__Patch__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Metadata Logs</relationshipLabel>
        <relationshipName>Metadata_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>