app/main/default/objects/Flosum__Metadata_Log__c/fields/Flosum__Start_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>